--- a/Main/public/pages/notes.html
+++ b/Main/public/pages/notes.html
@@ -53,6 +53,6 @@
         </div>
       </div>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="../scripts/index.js"></script>
   </body>
 </html>
